Move Call and WhatsApp buttons to the right

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="container header-container" style="max-width: 100%; padding: 0 40px;">
+        <div class="container header-container"
+            style="max-width: 100%; padding: 0 40px; display: flex; justify-content: space-between; align-items: center;">
             <div style="display: flex; align-items: center; gap: 20px;">
                 <a href="#" class="logo">
                     <img src="logo.png" alt="Drive Your Dreams" class="logo-img"
                         style="display: block; height: 50px; width: auto; opacity: 1;">
                 </a>
 
-                <div class="header-center-text" style="font-family: 'Playfair Display', serif; flex: 0;">
+                <div class="header-center-text" style="font-family: 'Playfair Display', serif;">
                     DRIVE YOUR DREAMS
                 </div>
             </div>
