Update scroll progress car icon to blue gradient

--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
         <div class="scroll-progress-container">
             <div class="scroll-progress-bar" id="scrollProgressBar"></div>
             <div class="scroll-progress-car" id="scrollProgressCar">
-                <!-- Premium Sports Car Icon -->
+                <!-- Premium Sports Car Icon - Blue Theme -->
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 64 64" fill="none">
                     <!-- Car Body -->
-                    <path d="M8 32 L16 24 L24 20 L40 20 L48 24 L56 32 L56 44 L8 44 Z" fill="url(#goldGradient)"
-                        stroke="#D4AF37" stroke-width="2" />
+                    <path d="M8 32 L16 24 L24 20 L40 20 L48 24 L56 32 L56 44 L8 44 Z" fill="url(#blueGradient)"
+                        stroke="#3b82f6" stroke-width="2" />
                     <!-- Windshield -->
-                    <path d="M24 20 L28 16 L36 16 L40 20" fill="rgba(255,255,255,0.3)" stroke="#D4AF37"
+                    <path d="M24 20 L28 16 L36 16 L40 20" fill="rgba(255,255,255,0.3)" stroke="#3b82f6"
                         stroke-width="1.5" />
                     <!-- Front Wheel -->
-                    <circle cx="18" cy="44" r="6" fill="#1a1a1a" stroke="#D4AF37" stroke-width="2" />
-                    <circle cx="18" cy="44" r="3" fill="#D4AF37" />
+                    <circle cx="18" cy="44" r="6" fill="#1a1a1a" stroke="#3b82f6" stroke-width="2" />
+                    <circle cx="18" cy="44" r="3" fill="#3b82f6" />
                     <!-- Rear Wheel -->
-                    <circle cx="46" cy="44" r="6" fill="#1a1a1a" stroke="#D4AF37" stroke-width="2" />
-                    <circle cx="46" cy="44" r="3" fill="#D4AF37" />
+                    <circle cx="46" cy="44" r="6" fill="#1a1a1a" stroke="#3b82f6" stroke-width="2" />
+                    <circle cx="46" cy="44" r="3" fill="#3b82f6" />
                     <!-- Headlight -->
-                    <circle cx="54" cy="32" r="2" fill="#FFD700" opacity="0.9" />
+                    <circle cx="54" cy="32" r="2" fill="#60a5fa" opacity="0.9" />
                     <!-- Gradient Definition -->
                     <defs>
-                        <linearGradient id="goldGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" style="stop-color:#D4AF37;stop-opacity:1" />
-                            <stop offset="50%" style="stop-color:#FFD700;stop-opacity:1" />
-                            <stop offset="100%" style="stop-color:#D4AF37;stop-opacity:1" />
+                        <linearGradient id="blueGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                            <stop offset="0%" style="stop-color:#2563eb;stop-opacity:1" />
+                            <stop offset="50%" style="stop-color:#3b82f6;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#60a5fa;stop-opacity:1" />
                         </linearGradient>
                     </defs>
                 </svg>
