Add professional car images for fleet

--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
                 <!-- Swift Dzire (Sedan) -->
                 <div class="fleet-card" data-category="sedan">
                     <div class="card-image-wrapper">
-                        <img src="https://cdn.pixabay.com/photo/2016/11/22/23/44/porsche-1851246_640.jpg"
-                            alt="Maruti Swift Dzire" class="card-img">
+                        <img src="swift-dzire.png" alt="Maruti Swift Dzire" class="card-img">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Maruti Swift Dzire</h3>
@@ -242,8 +241,7 @@
                 <!-- Hyundai Creta (Midsize SUV) -->
                 <div class="fleet-card" data-category="midsize-suv">
                     <div class="card-image-wrapper">
-                        <img src="https://cdn.pixabay.com/photo/2016/04/01/12/16/car-1300629_640.jpg"
-                            alt="Hyundai Creta" class="card-img">
+                        <img src="creta.png" alt="Hyundai Creta" class="card-img">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Hyundai Creta</h3>
@@ -259,8 +257,7 @@
                 <!-- Toyota Innova Crysta (Full-Size SUV) -->
                 <div class="fleet-card" data-category="fullsize-suv">
                     <div class="card-image-wrapper">
-                        <img src="https://cdn.pixabay.com/photo/2016/11/18/15/58/toyota-1835478_640.jpg"
-                            alt="Toyota Innova Crysta" class="card-img">
+                        <img src="innova.png" alt="Toyota Innova Crysta" class="card-img">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Toyota Innova Crysta</h3>
@@ -276,8 +273,7 @@
                 <!-- Toyota Fortuner (Full-Size SUV) -->
                 <div class="fleet-card" data-category="fullsize-suv">
                     <div class="card-image-wrapper">
-                        <img src="https://cdn.pixabay.com/photo/2016/11/18/15/58/toyota-1835478_640.jpg"
-                            alt="Toyota Fortuner" class="card-img">
+                        <img src="fortuner.png" alt="Toyota Fortuner" class="card-img">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Toyota Fortuner AT</h3>
