Fix hero slider images to match correct car names

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
             <div class="hero-image-wrapper" id="hero-slider">
                 <!-- Slide 1: Fortuner -->
                 <div class="hero-slide active">
-                    <img src="https://cdn.pixabay.com/photo/2016/11/18/15/58/toyota-1835478_1280.jpg"
-                        alt="Toyota Fortuner" class="hero-car-img">
+                    <img src="fortuner.png" alt="Toyota Fortuner" class="hero-car-img">
                     <div class="slide-overlay">
                         <h3 style="font-size: 2.5rem; font-weight: 700; color: white; margin-bottom: 15px;">Toyota
                             Fortuner</h3>
@@ -123,26 +122,24 @@
 
                 <!-- Slide 2: BMW -->
                 <div class="hero-slide">
-                    <img src="https://cdn.pixabay.com/photo/2014/09/07/22/34/car-race-438467_1280.jpg"
-                        alt="BMW X1 Luxury" class="hero-car-img">
+                    <img src="creta.png" alt="Hyundai Creta" class="hero-car-img">
                     <div class="slide-overlay">
-                        <h3 style="font-size: 2.5rem; font-weight: 700; color: white; margin-bottom: 15px;">BMW X1
-                            Luxury</h3>
+                        <h3 style="font-size: 2.5rem; font-weight: 700; color: white; margin-bottom: 15px;">Hyundai
+                            Creta</h3>
                         <div style="display: flex; gap: 12px;">
                             <span class="price-badge"
                                 style="background: rgba(255,255,255,0.1); color: white; padding: 6px 16px; border-radius: 50px; font-weight: 500;">From
-                                ₹8000 / 12h</span>
+                                ₹2499 / 12h</span>
                             <span class="price-badge"
                                 style="background: var(--color-primary); color: white; padding: 6px 16px; border-radius: 50px; font-weight: 500;">24h
-                                ₹15000</span>
+                                ₹3999</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Slide 3: Swift -->
                 <div class="hero-slide">
-                    <img src="https://cdn.pixabay.com/photo/2016/11/22/23/44/porsche-1851246_1280.jpg" alt="Swift Dzire"
-                        class="hero-car-img">
+                    <img src="swift-dzire.png" alt="Swift Dzire" class="hero-car-img">
                     <div class="slide-overlay">
                         <h3 style="font-size: 2.5rem; font-weight: 700; color: white; margin-bottom: 15px;">Swift Dzire
                         </h3>
